[package]
name = "rust-hashes"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
adler = "1.0.2"
ahash = "0.8.3"
ascon-hash = "0.2.0"
blake2 = "0.10.6"
blake3 = "1.4.1"
crc32fast = "1.3.2"
digest = { version = "0.10.7", features = ["core-api"] }
fnv = "1.0.7"
fxhash = "0.2.1"
hash_hasher = "2.0.3"
highway = "1.1.0"
md-5 = "0.10.5"
ripemd = "0.1.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
siphasher = "1.0.0"
twox-hash = "1.6.3"
whirlpool = "0.10.4"
wyhash = "0.5.0"
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh32", "xxh64"] }

# enable LTO and single-unit CG to improve runtime performance
[profile.release]
lto = "fat"
codegen-units = 1

[build-dependencies]
cbindgen = "0.25.0"
